--- a/src/main/resources/templates/agendamentoDentista.html
+++ b/src/main/resources/templates/agendamentoDentista.html
@@ -1,77 +1,55 @@
 <!doctype html>
 <html lang="pt_BR">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Agendamento</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" th:href="@{/css/style.css}">
-</head>
+<head th:replace="~{fragments :: header('Confirmação de Agendamento')}"></head>
 
-<body>
-<div id="central">
-    <a href="/">Voltar</a>
-    <title>Agendamento</title>
-    <form method="POST" th:action="@{/agendamento/__${agendamento.getId()}__}" enctype="utf8" th:object="${agendamentoDTO}">
-        <div class="mb-3">
-            <label for="tipoAgendamento" class="form-label">Tipo de Agendamento</label>
-            <select class="form-select" aria-label="Default select example" id="tipoAgendamento">
-                <option selected th:text="${agendamento.getTipo().getDescricao()}" th:value="${agendamento.getTipo().ordinal()}"></option>
-            </select>
+<body class="bg-sky-100">
+    <div class="flex flex-col my-4 items-center">
+        <div class="border rounded max-w-lg w-full flex flex-col px-8 pt-3 pb-5 bg-white shadow-md">
+
+            <h1 class="font-bold text-3xl text-center mt-3 text-gray-800">Confirmar Atendimento</h1>
+
+            <h2 class="text-gray-700 font-bold mt-5 mb-1 uppercase">
+                Informações do Agendamento
+            </h2>
+
+            <label class="text-gray-800 font-semibold">Tipo de Agendamento: <span class="font-normal text-gray-400 outline-blue-400 mb-4" th:text="${agendamento.getTipo().getDescricao()}"></span></label>
+            
+            <label class="text-gray-800 font-semibold">Dentista: <span class="font-normal text-gray-400 outline-blue-400 mb-4" th:text="${agendamento.getDentista().getPessoa().getNome()}"></span></label>
+            
+            <label class="text-gray-800 font-semibold">Paciente: <span class="font-normal text-gray-400 outline-blue-400 mb-4" th:text="${agendamento.getPaciente().getPessoa().getNome()}"></span></label>
+
+            <label class="text-gray-800 font-semibold">Data da Consulta: <span class="font-normal text-gray-400 outline-blue-400 mb-4" th:text="${#dates.format(agendamento.getDataConsulta(),'dd/MM/yyyy')}"></span></label>
+
+            <label class="text-gray-800 font-semibold">Hora da Consulta: <span class="font-normal text-gray-400 outline-blue-400 mb-4" th:text="${#dates.format(agendamento.getHoraConsulta(),'HH:mm')}"></span></label>
+
+            <label class="text-gray-800 font-semibold">Observações do Paciente: <span class="font-normal text-gray-400 outline-blue-400 mb-4" th:text="${agendamento.getObservacoesPaciente()}"></span></label>
+
+            <label class="text-gray-800 font-semibold">Forma de Pagamento: <span class="font-normal text-gray-400 outline-blue-400 mb-4" th:text="${agendamento.getFormaPagamento().getDescricao()}"></span></label>
+
+            <form method="POST" th:action="@{/agendamento/__${agendamento.getId()}__}" enctype="utf8"
+                th:object="${agendamentoDTO}">
+                <h2 class="text-gray-700 font-bold mt-5 mb-1 uppercase">
+                    Informações Adicionais
+                </h2>
+
+                <label class="font-medium text-gray-700 block" for="horaFim">Hora do Fim da Consulta (Tempo Estimado)</label>
+                <input class="form-input bg-slate-100 text-gray-700 outline-blue-400 mb-4" type="time" th:field="*{horaFim}" id="horaFim" name="horaFim">
+                <div th:replace="~{fragments :: listaErros('horaFim')}"></div>
+
+                <label class="font-medium text-gray-700 block" for="inputObservacoesDentista">Observações</label>
+                <textarea class="form-input bg-slate-100 text-gray-700 outline-blue-400 mb-4" th:field="*{observacoesDentista}" id="inputObservacoesDentista" name="observacoesDentista"></textarea>
+
+                <div class="mt-3 self-end">
+                    <a class="self-center mb-4 border border-blue-400 bg-white text-blue-400 hover:text-blue-500 hover:border-blue-500 font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
+                    href="/">Cancelar</a>
+                    <button type="submit" class="self-center mb-4 bg-blue-400 hover:bg-blue-500 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">Confirmar Agendamento</button>
+                </div>
+
+            </form>
         </div>
-        <div class="mb-3">
-            <label for="dentista" class="form-label">Dentista</label>
-            <select class="form-select" aria-label="Default select example" id="dentista">
-                <option selected  th:text="${agendamento.getDentista().getPessoa().getNome()}"
-                        th:value="${agendamento.getDentista().getId()}"></option>
-            </select>
-        </div>
-        <div class="mb-3">
-            <label for="paciente" class="form-label">Paciente</label>
-            <select class="form-select" aria-label="Default select example" id="paciente">
-                <option selected  th:text="${agendamento.getPaciente().getPessoa().getNome()}"
-                        th:value="${agendamento.getPaciente().getId()}"></option>
-            </select>
-        </div>
-        <div class="row mb-3">
-            <div class="col-md-6">
-                <label for="dataConsulta" class="form-label">Data da Consulta</label>
-                <div type="text"  th:text="${#dates.format(agendamento.getDataConsulta(),'dd/MM/yyyy')}" class="form-control" id="dataConsulta" name="dataConsulta"/>
-            </div>
-            <div class="col-md-6">
-                <label for="inputObservacoes" class="form-label">Hora da Consulta</label>
-                <div th:text="${#dates.format(agendamento.getHoraConsulta(),'HH:mm')}" class="form-control" id="horaConsulta" name="horaConsulta"/>
-            </div>
-        </div>
-        <div class="mb-3">
-            <label for="inputObservacoes" class="form-label">Observações do Paciente</label>
-            <div type="text" th:text="${agendamento.getObservacoesPaciente()}" class="form-control" id="inputObservacoes" name="observacoes"/>
-        </div>
-        <div class="mb-3">
-            <label for="formaPagamento" class="form-label">Forma de Pagamento</label>
-            <select class="form-select" aria-label="Default select example" id="formaPagamento">
-                <option th:text="${agendamento.getFormaPagamento().getDescricao()}" th:value="${agendamento.getFormaPagamento().ordinal()}"></option>
-            </select>
-        </div>
-        <title>Informações de Confirmação</title>
-        <div class="mb-3">
-            <label for="inputObservacoes" class="form-label">Observações</label>
-            <input type="textarea" th:field="*{observacoesDentista}" class="form-control" id="inputObservacoesDentista" name="observacoesDentista">
-            <div th:replace="~{fragments :: listaErros('horaFim')}"></div>
-        </div>
-        <div class="mb-3">
-            <label for="duracao" class="form-label">Duração do Procedimento (Tempo Estimado)</label>
-            <input type="time" th:field="*{horaFim}" class="form-control" id="duracao" name="dataConsulta">
-        </div>
-        <div class="mb-3">
-            <button type="submit" class="btn btn-primary">Confirmar Agendamento</button>
-        </div>
-    </form>
-</div>
+    </div>
+
 </body>
 
 </html>
